18 February 2019: Wouter
	- Print query name with ip_ratelimit exceeded log lines.
	- Spaces instead of tabs in that log message.
	- Print query name and IP address when domain rate limit exceeded.

14 February 2019: Wouter
	- Fix capsforid canonical sort qsort callback.

11 February 2019: Wouter
	- Note default for module-config in man page.
	- Fix recursion lame test for qname minimisation asked queries,
	  that were not present in the set of prepared answers.
	- Fix #13: Remove left-over requirements on OpenSSL >= 1.1.0 for
	  cert name matching, from man page.
	- make depend, with newer gcc, nicer layout.

7 February 2019: Wouter
	- Fix #4206: OpenSSL 1.0.2 hostname verification for FreeBSD 11.2.
	- Fix that qname minimisation does not skip a label when missing
	  nameserver targets need to be fetched.
	- Fix #4225: clients seem to erroneously receive no answer with
	  DNS-over-TLS and qname-minimisation.

4 February 2019: Wouter
	- Fix that log-replies prints the correct name for local-alias
	  names, for names that have a CNAME in local-data configuration.
	  It logs the original query name, not the target of the CNAME.
	- Add local-zone type inform_redirect, which logs like type inform,
	  and redirects like type redirect.
	- Perform canonical sort for 0x20 capsforid compare of replies,
	  this sorts rrsets in the authority and additional section before
	  comparison, so that out of order rrsets do not cause failure.

31 January 2019: Wouter
	- Set ub_ctx_set_tls call signature in ltrace config file for
	  libunbound in contrib/libunbound.so.conf.
	- improve documentation for tls-service-key and forward-first.
	- #10: fixed pkg-config operations, PKG_PROG_PKG_CONFIG moved out of
	  conditional section, fixes systemd builds, from Enrico Scholz.
	- #9: For openssl 1.0.2 use the CRYPTO_THREADID locking callbacks,
	  still supports the set_id_callback previous API.  And for 1.1.0
	  no locking callbacks are needed.